chore(dropdown menu): apply z-index value higher than navs to prevent being layered under the navs

--- a/src/components/Dropdown/dropdown-menu.css
+++ b/src/components/Dropdown/dropdown-menu.css
@@ -17,7 +17,7 @@
   position: absolute;
   text-align: left;
   overflow-y: auto;
-  z-index: 500;
+  z-index: 1050;
 }
 
 .nav-tabs .dropdown-menu {
